# riskrs

./: Cargo.toml  LICENSE  justfile  pyproject.toml
bindings/riskrs-python/: Cargo.toml  pyproject.toml
bindings/riskrs-python/python/riskrs/: __init__.py  typing.py
bindings/riskrs-python/src/: expressions.rs  lib.rs
bindings/riskrs-python/tests/test_metrics/: test_auc.py
libs/riskrs-core/: Cargo.toml
libs/riskrs-core/src/: lib.rs
src/: lib.rs
