# [package]
# name = "riskrs"
# version = "0.1.0"
# edition = "2021"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "riskrs"
# crate-type = ["cdylib"]

# [dependencies]
# polars = { version = "0.49.1", default-features = false, features = [
#     "dtype-struct",
# ] }
# polars-arrow = { version = "0.49.1", default-features = false }
# pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py39"] }
# pyo3-polars = { version = "0.22.0", features = ["derive"] }

[workspace]
members = ["libs/riskrs-core", "bindings/riskrs-python"]
resolver = "2"

[workspace.dependencies]
polars = { version = "0.49.1", default-features = false }
pyo3 = { version = "0.25.1" }
pyo3-polars = { version = "0.22.0" }