[package]
name = "riskrs-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "riskrs"
crate-type = ["cdylib"]

[dependencies]
riskrs-core = { path = "../../libs/riskrs-core" }
polars = { workspace = true, features = ["dtype-struct"] }
polars-arrow = { version = "0.49.1", default-features = false }
pyo3 = { workspace = true, features = ["extension-module", "abi3-py39"] }
pyo3-polars = { workspace = true, features = ["derive"] }
